# internal-docs-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: audit.py  documents.py  health.py  queries.py
app/core/: __init__.py  config.py  container.py  exceptions.py  logging.py
app/database/: models.py  session.py
app/db/: models.py  session.py
app/db/repositories/: documents.py
app/domain/services/: audit_service.py  chunking.py  document_service.py  query_service.py
app/infra/llm/: chat_client.py  embeddings_client.py
app/infra/openai/: __init__.py  client.py
app/infra/parsers/: base.py  csv_parser.py  factory.py  models.py  pdf.py  pdf_parser.py  spreadsheet.py  xlsx_parser.py
app/infra/vector/: __init__.py  chroma_store.py
app/infra/vectorstore/: chroma_store.py
app/repositories/: audit_repository.py  chunk_repository.py  document_repository.py  query_repository.py
app/schemas/: audit.py  document.py  query.py
app/services/: answer_service.py  audit_service.py  chunking_service.py  document_ingestion_service.py  embedding_service.py  parsing_service.py  query_service.py  retrieval_service.py
tests/: conftest.py  test_chunking.py  test_pdf_parser.py  test_spreadsheet_parser.py
tests/integration/: test_document_upload_endpoint.py  test_health_endpoint.py  test_query_flow.py
tests/unit/: test_chunking_service.py  test_pdf_parser.py  test_spreadsheet_parsers.py
